tests/baselines/reference/contextualSignatureInArrayElementPrefersArrayUnionMemberLibEs2015.errors.txt
tests/cases/compiler/contextualSignatureInArrayElementPrefersArrayUnionMemberLibEs2015.ts(8,4): error TS7006: Parameter 'arg' implicitly has an 'any' type.


==== tests/cases/compiler/contextualSignatureInArrayElementPrefersArrayUnionMemberLibEs2015.ts (1 errors) ====
    // repro from #52588
    
    declare function test(
      arg: Record<string, (arg: string) => void> | Array<(arg: number) => void>
    ): void;
    
    test([
      (arg) => {
       ~~~
!!! error TS7006: Parameter 'arg' implicitly has an 'any' type.
        arg; // number
      },
    ]);
    